# actor_actix

./: .gitignore  Cargo.toml  Readme.md  jsonfile.json  main.sql
a_new_setup/: Cargo.toml  tasks.json
a_new_setup/glue/src/: lib.rs  token.rs
a_new_setup/scripts/: basic_test.sh  run_server.cmd  run_server.sh
basic_setup/: Cargo.toml  state.json
basic_setup/src/: main.rs
basic_setup/src/json_serialization/: mod.rs  to_do_items.rs
basic_setup/src/to_do/structs/: base.rs  player.rs
basic_setup/src/views/: mod.rs
basic_setup/src/views/auth/: login.rs  logout.rs  mod.rs
basic_setup/src/views/to_do/: create.rs  get.rs  mod.rs
carport/: index.html  script.js  style.css
ingress/: Cargo.toml  index.html  package-lock.json
ingress/frontend/: esbuild.js  package-lock.json  package.json  serve.json  ts.config.json
ingress/frontend/public/: bundle.js  bundle.js.map  index.html
ingress/frontend/rust-interface/: Cargo.toml
ingress/frontend/src/: index.tsx
ingress/frontend/src/api/: create.ts  delete.ts  get.ts  url.ts  utils.ts
ingress/frontend/src/components/: ToDoItem.tsx  (+1 more)
ingress/src/: main.rs
managing_views/: Cargo.toml
managing_views/src/: main.rs
managing_views/src/views/: mod.rs  path.rs
nothing_to_do/frontend/public/: bundle.js.map
src/: db_actor.rs  item.rs  main.rs  state.rs
src/do/structs/: base.rs  pending.rs
src/doit/: mod.rs
src/doit/structs/: base.rs  done.rs  pending.rs  product.rs
xample/: example1.rs
xample/actixxample/: Cargo.toml
xample/actixxample/src/: handler.rs  main.rs
xyz/: Cargo.toml
xyz/src/: main.rs
(+21 files in other folders)
